cabal-version: 3.8
name: doctest-driver
version: 0.1.0.0
synopsis: DocTest driver based on extraction instead of GHCi.
-- A longer description of the package.
-- description:
homepage: https://github.com/ruifengx/doctest-driver
license: AGPL-3.0-or-later
license-file: COPYING.md
author: Ruifeng Xie
maintainer: ruifengx@outlook.com
copyright: Copyright 2024, Ruifeng Xie
category: Testing
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common base
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    NoFieldSelectors
    NoStarIsType
    OverloadedRecordDot
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

  build-depends:
    base ^>=4.18.2.1

common binary
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    doctest-driver

library
  import: base
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Test.DocTest.Driver.CodeGen
    Test.DocTest.Driver.Extract
    Test.DocTest.Driver.Extract.Ast
    Test.DocTest.Driver.Extract.Dump
    Test.DocTest.Driver.Extract.GHC
    Test.DocTest.Driver.Utils

  other-modules:
    PackageInfo_doctest_driver

  build-depends:
    directory ^>=1.3.8.5,
    filepath ^>=1.4.300.1,
    ghc ^>=9.6.6,
    ghc-paths ^>=0.1.0.12,
    mtl ^>=2.3.1,
    syb ^>=0.7.2.4,

executable doctest-driver
  import: base, binary
  main-is: Main.hs
  hs-source-dirs: app

test-suite doctest-driver-test
  import: base, binary
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
